<resources>
    <string name="app_name">HiOrange</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="home_box">箱子</string>
    <string name="home_location">位置</string>
    <string name="home_controller">遥控</string>
    <string name="home_setting">我的</string>
    <string name="binding_managerbox">绑定管理</string>
    <string name="volume_alarm">声音提醒</string>
    <string name="finger_manager">指纹管理</string>
    <string name="firware_update">固件更新</string>
    <string name="alarm_info">报警信息</string>
    <string name="about_app">关于APP</string>
    <string name="valuePaintColor">#000000</string>
    <string name="unitPaintColor">#BBBBBB</string>
    <string name="desPaintColor">#808080</string>
    <string name="circlePaintColor">#3B4953</string>
    <string name="circleLinePaintColor">#1AE9EB</string>
    <string name="titlePaintColor">#FFFFFF</string>

    <string name="notifyTitle">提示</string>
    <string name="notifyMsg">当前应用缺少必要权限。\n\n请点击\"设置\"-\"权限\"-打开所需权限。</string>
    <string name="setting">设置</string>
    <string name="cancel">取消</string>


    <string name="encode_qrcode">生成二维码</string>
    <string name="dencode_qrcode">扫描二维码</string>
    <string name="code_text">请输入生成二维码的文本信息</string>
    <string name="qrcodetext">这里显示扫描结果</string>
    <string name="password_different">密码不一致，请重新输入</string>
    <string name="input_incomplete">输入不完整，请确认</string>
    <string name="user_register">新用户注册</string>
    <string name="network_failed">请确认接入网络后重新操作</string>
    <string name="phone_hint">请输入手机号</string>
    <string name="password_confirm_hint">请确认密码</string>
    <string name="password_hint">请输入密码</string>
    <string name="verifycode_hint">请输入验证码</string>
    <string name="code_send">发送验证码</string>
    <string name="register_now">立即注册</string>
    <string name="box_info_closed_state">开合状态</string>
    <string name="box_info_lock_state">箱锁状态</string>
    <string name="box_info_life_time">预计续航</string>
    <string name="box_info_weight">箱子重量</string>
    <string name="box_info_unlock">远程开锁</string>
    <string name="login_get_info">箱子信息获取中...</string>
    <string name="Connect">连接</string>
    <string name="box_info_power">电量</string>
    <string name="box_info_lock">上锁</string>
    <string name="unbind">解绑</string>
    <string name="input_box_id">请输入行李箱ID</string>
    <string name="bind">绑定</string>
    <string name="current_box_id">当前绑定行李箱ID</string>
    <string name="Obstacle_alarm">障碍报警声音开关</string>
    <string name="Lost_alarm">跟丢报警声音开关</string>
    <string name="power_on_alarm">开机提示音开关</string>
    <string name="controller_alarm">遥控提示音开关</string>
    <string name="follow_alarm">跟踪提示音开关</string>
    <string name="power_off_alarm">关机提示音开关</string>
    <string name="phoneNumber">手机号码</string>
    <string name="forgetpassword">忘记密码?</string>
    <string name="login">登陆</string>
    <string name="register">注册</string>
    <string name="password">密码</string>
    <string name="registernow">立即注册</string>
    <string name="scanQrcode">扫描二维码绑定</string>
    <string name="Soundreminder">声音提醒设置</string>
    <string name="GetAlarmSettings">正在获取</string>
    <string name="saving">保存中</string>
    <string name="saveSucceed">保存成功</string>
    <string name="getSucceed">获取成功</string>
    <string name="boxopentime">箱子打开时间</string>
    <string name="boxlosttime">箱子丢失时间</string>
    <string name="btalarm">蓝牙提示音</string>
    <string name="helpalarm">助力提示音</string>
    <string name="leanalarm">倾倒提示音</string>
    <string name="boxlosealarm">箱子丢失提示音</string>
    <string name="lockalarm">开锁提示音</string>
    <string name="connect">连接</string>
    <string name="unlocking">远程解锁中</string>
    <string name="locking">远程上锁中</string>
    <string name="opened">开启</string>
    <string name="closed">关闭</string>
    <string name="checkboxstate">请检查箱子状态</string>
    <string name="getBoxInfo">箱子信息获取中</string>
    <string name="AlarmInfo">报警信息</string>
    <string name="SaveFailed">保存失败</string>
    <string name="GetFailed">获取失败,取得最近数据</string>
    <string name="GetFinger">获取指纹信息中</string>
    <string name="Fingerprintmanagement">指纹管理</string>
    <string name="isDelete">是否删除</string>
    <string name="deleteSucceed">删除成功</string>
    <string name="operateFailed">操作失败</string>
    <string name="Loginnow">正在登陆</string>
    <string name="clicktwiceexit">连续按两次退出程序</string>
    <string name="no">否</string>
    <string name="yes">是</string>
    <string name="registing">注册中...</string>
    <string name="reconnect">点击重新加载</string>

</resources>
