<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@android:color/white"
              android:orientation="vertical"
              android:paddingEnd="60dp"
              android:paddingStart="60dp">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.8"
        android:scaleType="center"
        android:src="@drawable/logo"/>

    <LinearLayout
        android:id="@+id/phone_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:scaleType="centerCrop"
                android:src="@drawable/user_number_icon"/>


            <EditText
                android:id="@+id/et_login_phone_number"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/phoneNumber"
                android:inputType="number"
                android:maxLines="1"
                android:padding="10dp"
                android:textColorHint="@color/hint_color"
                android:textSize="14sp"/>


            <ImageView
                android:id="@+id/iv_login_phone_clean"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="right|center"
                android:src="@mipmap/ic_launcher_round"
                android:visibility="gone"/>

        </LinearLayout>

        <View
            android:id="@+id/phone_number_under_line"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/hint_color"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:scaleType="centerCrop"
                android:src="@drawable/lock_icon"/>

            <EditText
                android:id="@+id/et_login_phone_password"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:padding="10dp"
                android:textColorHint="@color/hint_color"
                android:textSize="14sp"/>

            <ImageView
                android:id="@+id/iv_login_passsword_clean"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="right|center"
                android:src="@mipmap/ic_launcher_round"
                android:visibility="gone"/>


        </LinearLayout>

        <View
            android:id="@+id/phone_login_password_under_line"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="20dp"
            android:background="@color/hint_color"/>


    </LinearLayout>

    <TextView
        android:id="@+id/tv_login_forget_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right|center_vertical"
        android:layout_marginBottom="15dp"
        android:background="@null"
        android:text="@string/forgetpassword"
        android:textColor="#22DEF4"
        android:textSize="12sp"/>


    <Button
        android:id="@+id/btn_login_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@drawable/login_button"
        android:text="@string/login"
        android:textColor="@color/button_text_color"
        android:textSize="18sp"/>

    <Button
        android:id="@+id/btn_login_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="165dp"
        android:background="@drawable/register_button"
        android:text="@string/register"
        android:textColor="@android:color/holo_blue_bright"
        android:textSize="18sp"/>


</LinearLayout>